# pkggate

./: .bandit.yaml  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: README.md  dependabot.yml
.github/workflows/: README.md  ci.yml  docker.yml  docs.yml  release.yml  security.yml
config/: policy.yaml
docs/: architecture.md  audit-log.md  configuration.md  contributing.md  index.md  installation.md  policy.md  quickstart.md  roadmap.md  threat-intel.md
examples/: .npmrc.example  pip.conf.example
src/pkggate/: __init__.py  __main__.py  app.py  config.py  utils.py
src/pkggate/audit/: __init__.py  logger.py
src/pkggate/intel/: __init__.py  _semver.py  composite.py  mirror.py  osv.py
src/pkggate/policy/: __init__.py  engine.py  rules.py
src/pkggate/proxy/: __init__.py  integrity.py  npm.py  pypi.py
tests/: test_app.py  test_composite.py  test_config.py  test_e2e.py  test_integrity.py  test_mirror.py  test_npm.py  test_osv.py  test_policy.py  test_pypi.py  test_utils.py
