[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pkggate"
version = "0.1.5"
description = "Open-source package firewall proxy for npm and PyPI registries"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "pkggate contributors", email = "d@bitzer.dev" }]
dependencies = [
    "aiohttp>=3.13.5",
    "pyyaml>=6.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "structlog>=25.5.0",
    "cachetools>=7.1.1",
    "packaging>=26.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "aioresponses>=0.7.8",
    "ruff>=0.15.2",
    "mypy>=2.0.0",
    "bandit>=1.9.4",
    "safety>=3.7.0",
    "cyclonedx-bom>=7.3.0",
]

[project.scripts]
pkggate = "pkggate.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "RUF"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
strict_optional = true
